# FlashCardSRSWeb

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  main.py  notes.norg  pyproject.toml  venv
.github/workflows/: ci.yml
flashcardsrsweb/: __init__.py  app.py  binder.py  inject.py  pyright.json
flashcardsrsweb/cards/: create.py  delete.py  domain.py  dto.py  exceptions.py  read.py  repository.py  repository_interface.py  router.py  update.py
flashcardsrsweb/db/: base.py  engine.py  session.py  setup.py  uow.py  uow_interface.py
flashcardsrsweb/models/: flashcard.py  mappings.py  registry.py  uow.py  user.py
flashcardsrsweb/users/: create.py  domain.py  dto.py  exceptions.py  messages.py  repository.py  repository_interface.py  router.py
flashcardsrsweb/utils/: json_response.py  not_none.py  update_values.py
migrations/: env.py
migrations/versions/: 500927af5b3e_add_user_id_to_flashcards.py  95bb64ac66bd_create_flashcard_table.py  a9c64b0a5993_create_users_table.py
tests/: conftest.py  test_db_connection.py
tests/cards/: conftest.py  test_create.py  test_delete.py  test_read.py  test_update.py
tests/mocks/: uow.py
tests/users/: conftest.py  test_create.py
